# misc

./: .gitconfig  .vimrc  resources
config/: .bash_aliases  .bash_profile  .bashrc  .gdbinit  .gitconfig  .vimrc
os_setup/: dynmotd  install  motd  temp
project/: CMakeLists.txt  Makefile  Makefile.cfg
project-cmake/: CMakeLists.txt
project-cmake/cmake/: version.cmake  version.hh.in
project-cmake/core/: CMakeLists.txt
project-cmake/core/module/: CMakeLists.txt
project-cmake/core/module/test/: CMakeLists.txt  test.cc
project-cmake/version/: version.cmake  version.template
project/header/: .README
util/: jMisc.h  libraries  replace  run  upload
util/fork/: Makefile  basicForking.cc  basicSignalIgnore.cc
