GET_FILENAME_COMPONENT(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
STRING(REPLACE " " "_" ProjectId ${ProjectId})

PROJECT(${ProjectId})

FILE(GLOB SOURCE_FILES
     LIST_DIRECTORIES false
     ${PROJECT_SOURCE_DIR}/source/*)
FILE(GLOB HEADER_FILES
     LIST_DIRECTORIES false
     ${PROJECT_SOURCE_DIR}/header/*)
FILE(GLOB PRIVATE_HEADERS
     LIST_DIRECTORIES false
     ${PROJECT_SOURCE_DIR}/include/*)

LIST(LENGTH SOURCE_FILES SOURCE_COUNT)

IF(${SOURCE_COUNT} EQUAL 0)
    ADD_LIBRARY(${ProjectId} INTERFACE ${HEADER_FILES} ${PRIVATE_HEADERS})
ELSE()
    ADD_LIBRARY(${ProjectId} ${SOURCE_FILES} ${HEADER_FILES} ${PRIVATE_HEADERS})
ENDIF()

TARGET_INCLUDE_DIRECTORIES(${ProjectId}
                           PUBLIC header
                           PRIVATE include)

FILE(GLOB TEST_FILES
     ${PROJECT_SOURCE_DIR}/test/*)
LIST(LENGTH TEST_FILES TEST_COUNT)

IF(NOT TEST_COUNT EQUAL 0)
    ADD_EXECUTABLE(${ProjectId}_TEST ${TEST_FILES})
    TARGET_LINK_LIBRARIES(${ProjectId}_TEST
                          ${ProjectId})
ENDIF()

