FILE(REAL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/.." RELATIVE)
GET_FILENAME_COMPONENT(${ProjectId} ${RELATIVE} NAME)
STRING(REPLACE    " " "_" ProjectId ${ProjectId})

PROJECT(${ProjectId}_TEST)

FILE(GLOB SOURCE_TEST_FILES
     ${PROJECT_SOURCE_DIR}/*.cc)
FILE(GLOB HEADER_TEST_FILES
     ${PROJECT_SOURCE_DIR}/*.hh)

LIST(LENGTH SOURCE_TEST_FILES SOURCE_COUNT)
LIST(LENGTH HEADER_TEST_FILES HEADER_COUNT)

IF(NOT SOURCE_TEST_COUNT EQUAL 0 OR NOT HEADER_COUNT EQUAL 0)
    ADD_EXECUTABLE(${ProjectId}_TEST
                   ${SOURCE_TEST_FILES}
                   ${HEADER_TEST_FILES})
    TARGET_LINK_LIBRARIES(${ProjectId}_TEST
                          ${ProjectId}
                          # catch2
                          )
ENDIF()
